--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <h1>Daniel Fox</h1>
         <h2>Social Media Pioneer</h2>
         <ul class="contacts">
-            <li><a href="https://www.linkedin.com/in/daniel-fox-51a1a421b/"><img src="pictures/linkedin-black-white.jpg" alt="Black and white Linkedin icon"></a></li>
-            <li><a href=""><img src="pictures/email-black-white.png" alt="Black and white email icon"></a></li>
-            <li><a href="https://github.com/Foxtrotts"><img src="pictures/github-black-white.png" alt="Black and white Github logo"></a></li>
+            <li><a href="https://www.linkedin.com/in/daniel-fox-51a1a421b/"><img src="pictures/Rectangle 5Card.png" alt="Black and white Linkedin icon"></a></li>
+            <li><a href=""><img src="pictures/Rectangle 6Card.png" alt="Black and white email icon"></a></li>
+            <li><a href="https://github.com/Foxtrotts"><img src="pictures/Rectangle 7Card.png" alt="Black and white Github logo"></a></li>
         </ul>
     </div>
 </body>
